# cannonball-se

./: CHANGELOG  CMakeLists.txt  CMakePresets.json  README.md  add-kernel-permissions.sh  config.xml  install.sh  vcpkg.json
cmake/: CMakeLists.txt  linux.cmake
docs/: Blargg-NTSC-Filter-Concepts-and-Implementation.txt  CannonBall-SE-Screen-Filters.txt  CannonBall-SE-license.txt  Compiling-On-Windows.txt  LGPL-2.1.txt  THIRD-PARTY-NOTICES.md  cannonball-se.6  known-bugs.txt  license_atari800.txt  license_mame.txt
res/: Cannonball-Shader-Fragment-Fast.glsl  Cannonball-Shader-Fragment.glsl  Cannonball-Shader-Vertex.glsl  config.xml  gamecontrollerdb.txt
src/main/: globals.hpp  main.cpp  main.hpp  romloader.cpp  roms.cpp  singlecorepi.hpp  stdint.hpp  video.cpp  video.hpp  windirent.h
src/main/directx/: ffeedback.cpp
src/main/engine/: ocrash.cpp  oentry.hpp  oferrari.cpp  ohiscore.cpp  ohiscore.hpp  ohud.cpp  oinitengine.cpp  oinitengine.hpp  omap.cpp  omap.hpp  omusic.cpp  osmoke.cpp  osmoke.hpp  osprite.cpp  osprite.hpp  osprites.cpp  otiles.cpp  otraffic.cpp  otraffic.hpp  outrun.cpp  outrun.hpp
src/main/engine/audio/: osound.cpp  osoundint.cpp  osoundint.hpp
src/main/engine/data/: ozoom_lookup.hpp
src/main/frontend/: config.cpp  config.hpp  menu.cpp  menu.hpp  menulabels.hpp  ttrial.cpp  xml_parser.h
src/main/hwaudio/: segapcm.cpp  segapcm.hpp  soundchip.cpp  soundchip.hpp  ym2151.cpp  ym2151.hpp
src/main/hwvideo/: hwroad.cpp  hwroad.hpp  hwsprites.cpp  hwsprites.hpp  hwtiles.cpp  hwtiles.hpp
src/main/sdl2/: audio.cpp  audio.hpp  gl_backend.hpp  input.cpp  input.hpp  renderbase.cpp  renderbase.hpp  rendergl.cpp  rendersurface.cpp  rendersurface.hpp  snes_ntsc.c  snes_ntsc.cpp  snes_ntsc.h  snes_ntsc_config.h  snes_ntsc_impl.h  wav123.cpp  wav123.hpp
